fix: fixing w-screen overflow on edge browser

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,5 +4,5 @@
 
 body,
 html {
-  @apply antialiased scroll-smooth bg-dark-str;
+  @apply antialiased scroll-smooth bg-dark-str w-screen overflow-x-hidden;
 }
